Correction alignement

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+/*.container {
+  height: auto;
+  width: auto;
+}*/
+
 #header {
   color: #e91389;
 }
